--- a/OtrsSpy/pom.xml
+++ b/OtrsSpy/pom.xml
@@ -8,7 +8,36 @@
     <packaging>jar</packaging>
 
     <name>OtrsSpy</name>
-    <url>http://maven.apache.org</url>
+    <url>http://github.com/overlinden/OtrsSpy</url>
+    
+    <scm>
+        <url>http://github.com/overlinden/OtrsSpy</url>
+    	<connection>scm:git:ssh://git@github.com/overlinden/OtrsSpy.git</connection>
+    	<developerConnection>scm:git:ssh://git@github.com/overlinden/OtrsSpy.git</developerConnection>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>GNU GPL 3 or any later version</name>
+            <url>http://www.gnu.org/licenses/gpl.txt</url>
+            <distribution>manual</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+    	<developer>
+    		<id>overlinden</id>
+    		<name>Oliver Verlinden</name>
+    		<url>http://wps-verlinden.de</url>
+    		<organization>WPS Verlinden</organization>
+    		<organizationUrl>http://wps-verlinden.de</organizationUrl>
+    		<roles>
+    			<role>architect</role>
+    			<role>developer</role>
+    		</roles>
+    		<timezone>+1</timezone>
+    	</developer>
+    </developers>
     <build>
         <plugins>
             <plugin>
