--- a/OtrsSpy/pom.xml
+++ b/OtrsSpy/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.wpsverlinden</groupId>
     <artifactId>OtrsSpy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>OtrsSpy</name>
